fixed annoying extra x axis scrollbar refactoring css

--- a/reactapp/src/CSS/App.css
+++ b/reactapp/src/CSS/App.css
@@ -16,14 +16,22 @@
   --light-bg: #dbdbec;
 }
 
-/* .App { */
-/*   height: 200vh; */
+/* * { */
+/*   margin: 0; */
+/*   padding: 0; */
+/*   box-sizing: border-box; */
 /* } */
 
-.section-container {
+.App {
+  height: 200vh;
+  /* width: 100vw; */
+}
+
+.whole-page {
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  background-color: blue;
 }
 
 .classic-btn {
