--- a/reactapp/src/CSS/Navbar.css
+++ b/reactapp/src/CSS/Navbar.css
@@ -1,12 +1,12 @@
 nav {
-  width: 100vw;
+  width: 100%;
   position: fixed;
 }
 
 #navbar {
   background-color: var(--main-grey);
   position: fixed;
-  width: 100vw;
+  width: 100%;
   z-index: 1001;
   display: flex;
   flex-direction: row;
